<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">androidSacco</string>
    <string name="hint_userName">user name</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_new_member">Register New Member</string>
    <string name="btn_loan_application">Loan Application</string>
    <string name="btn_withdrawal">Withdrawal</string>
    <string name="btn_deposit">Deposit</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="hint_DOB">DOB</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_marital_status">Marital Status</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone_no">Phone NO</string>
    <string name="hint_email">Email</string>
    <string name="hint_occupation">Occupation</string>
    <string name="hint_member_since">Gender</string>
    <string name="hint_memberNo">Member Number</string>
</resources>
